@@ -7,3 +7,4 @@
  Persist crosshair settings
  Persist settings window placement
  Hide main window from task bar
+ Fix assembly properties
